--- a/assets/sass/_styles.scss
+++ b/assets/sass/_styles.scss
@@ -3,7 +3,6 @@
 body {
     font-family: $serif;
     color: $grey-dark;
-    text-size-adjust: 100%;
     background: $white;
     min-height: 100%;
     height: 100%;
@@ -24,16 +23,24 @@ p {
 
 a, a:visited, a:active {
     color: $link;
-    @include transit(all 0.25s ease-in-out);
+    @include transition(all 0.25s ease-in-out);
 }
 
 a:hover {
     color: $accent;
-    @include transit(all .25s ease-in-out);
+    @include transition(all .25s ease-in-out);
+}
+
+.fa {
+    color: $grey-medium;
+}
+
+a .fa:before {
+    @include transition(all .25s ease-in-out);
 }
 
 a:hover .fa:before {
-    @include transit(all .25s ease-in-out);
+    @include transition(all .25s ease-in-out);
 }
 
 em {
@@ -64,7 +71,7 @@ sub {
 .hilite {
     display: inline-block;
     padding: 0 0.3em;
-    @include br(4px);
+    @include border-radius(4px);
     background: $hilite;
 }
 
@@ -216,11 +223,11 @@ header.site-header hgroup {
     }
     a {
         color: #fff;
-        @include transit(all .2s ease);
+        @include transition(all .2s ease);
 
         &:hover {
-            @include tshd(0, 0, 3px, rgba(255, 255, 255, .6));
-            @include transit(all .2s ease);
+            @include text-shadow(0, 0, 3px, rgba(255, 255, 255, .6));
+            @include transition(all .2s ease);
         }
     }
 }
@@ -242,10 +249,10 @@ header.site-header nav {
         margin-left: 20px;
         a {
             color: white;
-            @include transit(all, .2s, ease);
+            @include transition(all, .2s, ease);
             &:hover {
-                @include tshd(0, 0, 3px, rgba(255, 255, 255, .6));
-                @include transit(all, .2s, ease);
+                @include text-shadow(0, 0, 3px, rgba(255, 255, 255, .6));
+                @include transition(all, .2s, ease);
             }
         }
     }
@@ -337,7 +344,7 @@ header.site-header nav {
             margin-bottom: $lh*1.5;
 
             .fa:before {
-                font-size: $fs1;
+                font-size: $fs3;
             }
         }
 
@@ -447,7 +454,7 @@ header.site-header nav {
         height: auto;
         display: block;
         margin: $lh auto;
-        @include br(4px);
+        @include border-radius(4px);
     }
 
     ul, ol {
@@ -495,10 +502,14 @@ header.site-header nav {
             cursor: pointer;
             color: $grey-light;
             border: 2px solid transparentize($grey-light, .3);
-            padding: 0 0.5em;
+            padding: 0.5em;
             display: inline-block;
 
-            @include br(4px);
+            @include border-radius(4px);
+
+            .fa {
+                padding-right: 2px;
+            }
 
             &:hover .fa:before {
                 color: $link;
